--- a/todo
+++ b/todo
@@ -4,8 +4,10 @@ Todo:
 [ ] Block updates if there are uncommited changes (proceed with care, requires
     extensive testing).
 
-> [ ] Separate logic of revisions/migrations (? why: current model works
-    well enough)
+> [ ] Separate logic of revisions/migrations (we should store migrations so one
+      can do some changes to them by hand. Revisions are for inner integrity checks.
+      Before actually doing any operations we should check if migrations are in
+      sync with our revision history)
     
 [ ] Implement include-data command, adding data info to migration.
 [ ] Non-invasive roll-back and roll-forward in order to support migration
@@ -13,14 +15,17 @@ Todo:
 * [ ] Ignore command: ignore some tables.
     Syntax: ignore [-r] table
 
+[reopened] Implement tip command (displays info for current revision)
+[reopened] Implement log command (displays detailed revision info)
+[reopened] We should save history of current branch, in order to track actual 
+    migration files. 
+[ ] Commits should open another point in revision history, yes!
+
+
 Done:
 
 [x] Support for shortcuts (ci for commit, up for update etc.)
 [x] Closer integration with Mercurial. Option to select VCS on init.
     Auto add .conf files on commit.
 [x] Implement status command (A, R, M, M+, M-)
-[x] Implement tip command (displays info for current revision)
-[x] Implement log command (displays detailed revision info)
-[x] We should save history of current branch, in order to track actual 
-    migration files.
 
